Update daily activities suggestions
